add font, photo

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="index.css" />
+    <link href="https://fonts.googleapis.com/css?family=Anton|Archivo+Black|Bitter|Didact+Gothic|Josefin+Sans|Kreon|Merriweather+Sans|Muli|Neuton|Open+Sans|PT+Sans|Poppins|Questrial|Reem+Kufi|Roboto|Viga&amp;subset=greek,greek-ext" rel="stylesheet">
 
     <!-- react bootstrap -->
     <link
