--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <meta name="description" content="Société de conseil en finances. Nous proposons des missions de conseil ainsi que des formations à destination du secteur public et du secteur privé." />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
